Fix horizontal scrollbars on columns

--- a/src/assets/scss/components/_columns.scss
+++ b/src/assets/scss/components/_columns.scss
@@ -12,7 +12,12 @@
     overflow-y: hidden;
     z-index: 1;
     pointer-events: none;
+    overflow-x: hidden;
     user-select: none;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     &__column {
         position: relative;
